# kirurc

./: .gitignore  .isort.cfg  LICENSE  README.md  fine_tune.py  pretrain.py  pyproject.toml  requirements.txt  setup.cfg
blender/bpy_scripts/: create_samples.py  save_camera_params.py
blender/scenes/: randomize_scene.py
conf/: evaluate_models.yaml  evaluate_prediction_dataset.yaml  evaluate_pretrained.yaml  fine_tune.yaml  generate_synthetic.yaml  preprocess_dataset.yaml  pretrain.yaml  render_saved_prediction.yaml  show_model_prediction.yaml  visualize_dataset.yaml
conf/color_mapping/: debugging.yaml  grey.yaml  paper.yaml  rviz.yaml
conf/dataset/: common.yaml  experiments_2023-04-17.yaml  lap_chole_scene.yaml  lap_chole_scene_test.yaml  predictions_2023-04-17.yaml  real_2023-03-15.yaml  real_2023-04-12.yaml
conf/fine_tune_default/: pnpp.yaml  stratified.yaml  transformer.yaml
conf/fine_tune_experiment/: 10percent_data.yaml  50percent_data.yaml  no_augmentation.yaml  no_cuts.yaml  no_diverse_labels.yaml  no_jitter.yaml  no_pretraining.yaml  no_rotations.yaml  no_shear_stretch.yaml  original_pretrained.yaml  pointwolf1.yaml  pointwolf2.yaml  pointwolf3.yaml  pointwolf4.yaml  pointwolf5.yaml  prob_merged.yaml  regression.yaml  (+7 more)
kirurc_vision/: __init__.py  builder.py  losses.py  metrics.py  runner.py
scripts/: evaluate_models.py  evaluate_prediction_dataset.py  evaluate_pretrained.py  generate_synthetic.py  preprocess_dataset.py  render_saved_prediction.py  show_model_prediction.py  shuffle_real_dataset.py  trim_validation_data.py  visualize_dataset.py
(+115 files in other folders)
