[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "kirurc_vision"
version = "0.1.0"
authors = [
  { name="Nikolai Franke, Balazs Gyenes", email="balazs.gyenes@kit.edu" },
]
description = "Predicting clip target positions from sensor point clouds"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy < 2.0",
]

[tool.isort]
profile = "black"
known_first_party = ["kirurc_vision"]
known_third_party = ["wandb"]
