[metadata]
name = kirurc_vision
version = 0.1
author = Nikolai Franke, Balazs Gyenes
author_email = balazs.gyenes@kit.edu
description = Predicting clip target positions from sensor point clouds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/balazsgyenes/kirurc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    numpy < 2.0

[options.packages.find]
include = kirurc_vision*
